fix: prevent stretching of img

--- a/src/assets/Views/Home/Home.module.css
+++ b/src/assets/Views/Home/Home.module.css
@@ -14,6 +14,8 @@ img {
 .headshot {
   margin-top: 48px;
   width: 400px;
+  height: auto;
+  object-fit: contain;
 }
 
 .bio {
